# tbshg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.rst  hv.pkl  kmesh.pkl  setup.py
tbshg/: CMakeLists.txt  Makefile  calculateshg.py  calculateshgnew  hamiltonian.py  optic.py  testpackge.py
tbshg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tbshg/cmake/share/pkgconfig/: eigen3.pc
tbshg/src/: hamiltoniank.hpp  solveopt.hpp  solveshg.hpp  tbshg.cpp  tmp.cpp
tbshg/utils/: configs.py  constant.py  kmesh.py  subscribe.py  wanniers.py
tbshg_core/: CMakeLists.txt
tbshg_core/cmake/share/eigen3/cmake/: Eigen3Targets.cmake
tbshg_core/src/: hamiltoniank.hpp  solveopt.hpp  tbshg.cpp  tmp.cpp
test/shg/: calculateshg  linear_and_shg-c42.conf  linear_and_shg.conf  plotshgresult  shg.conf  shg_directs.csv  test.conf
